# weather-tui

./: Cargo.toml  LICENCE.txt  README.md  sample_data.json
src/: main.rs  models.rs  tui.rs  user.rs  weather.rs
