[package]
name = "weather-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.11.0"
tokio = { version = "1", features = ["full"] }
tui = { version = "0.19", features = ["termion"] }
termion = "1.5.6"
